app/assets/stylesheets/application.scss
// Custom bootstrap variables must be set or imported *before* bootstrap.
@import "bootstrap";
@import "font-awesome";
@import "navbar";
@import "search_field";
@import "devise";
@import "post";
@import "category";
@import "error_preview";

body {
  background-color: white;
  height: 100%;
  width: 100%;
  position: absolute;
  display: flex;
  flex-direction: column;
  gap: 5%;

  background-image: image-url('background-img');
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-bottom: 20px;
}

h1 {
  font-weight: 200;
}

a {
  text-decoration: none;
  margin: 10px 0px 20px;
}

